--- a/app/src/main/res/layout/tab_main_company.xml
+++ b/app/src/main/res/layout/tab_main_company.xml
@@ -5,64 +5,138 @@
     android:layout_height="match_parent"
     android:background="@color/page_bg">
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:layout_marginBottom="10dp">
+    <!--<TableLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/white"-->
+        <!--android:layout_marginBottom="10dp">-->
 
-        <TableRow
-            android:layout_width="wrap_content"
+        <!--<TableRow-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingTop="15dp"-->
+            <!--android:paddingBottom="15dp"-->
+            <!--android:paddingLeft="6dp"-->
+            <!--android:paddingRight="6dp">-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:layout_marginBottom="10dp"
             android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/company_all"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textColor="@color/title_bg"
-                android:textSize="14sp"
-                android:text="@string/company_all" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/company_news"
+                <TextView
+                    android:id="@+id/company_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textStyle="bold"
+                    android:textColor="@color/title_bg"
+                    android:textSize="14sp"
+                    android:text="@string/company_all" />
+
+                <View
+                    android:id="@+id/all_tab_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="2dp"
+                    android:background="@color/title_bg"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="14sp"
-                android:textColor="@color/mainTabOff"
-                android:text="@string/company_news" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/company_dongTai"
+                <TextView
+                    android:id="@+id/company_news"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="14sp"
+                    android:textColor="@color/mainTabOff"
+                    android:text="@string/company_news" />
+
+                <View
+                    android:id="@+id/news_tab_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="2dp"
+                    android:background="@color/white"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="14sp"
-                android:textColor="@color/mainTabOff"
-                android:text="@string/company_dongTai" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/company_maoYi"
+                <TextView
+                    android:id="@+id/company_dongTai"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="14sp"
+                    android:textColor="@color/mainTabOff"
+                    android:text="@string/company_dongTai" />
+
+                <View
+                    android:id="@+id/dongTai_tab_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="2dp"
+                    android:background="@color/white"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"/>
+
+                </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="14sp"
-                android:textColor="@color/mainTabOff"
-                android:text="@string/company_maoYi" />
+                android:orientation="vertical">
 
-        </TableRow>
+                <TextView
+                    android:id="@+id/company_maoYi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="14sp"
+                    android:textColor="@color/mainTabOff"
+                    android:text="@string/company_maoYi" />
 
-    </TableLayout>
+                <View
+                    android:id="@+id/maoYi_tab_line"
+                    android:layout_width="wrap_content"
+                    android:layout_height="2dp"
+                    android:background="@color/white"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"/>
+
+            </LinearLayout>
+
+        <!--</TableRow>-->
+
+    <!--</TableLayout>-->
+
+        </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/company_pager"
