--- a/app/src/main/res/layout/apply_invest.xml
+++ b/app/src/main/res/layout/apply_invest.xml
@@ -54,6 +54,14 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"/>
 
+    <Spinner
+        android:id="@+id/spinner_product"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:animationCache="true"
+        android:drawSelectorOnTop="true"
+        android:visibility="gone"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
