--- a/app/src/main/res/layout/apply_loan.xml
+++ b/app/src/main/res/layout/apply_loan.xml
@@ -55,11 +55,20 @@
         android:paddingRight="20dp"/>
 
     <Spinner
+        android:id="@+id/spinner_product"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:animationCache="true"
+        android:drawSelectorOnTop="true"
+        android:visibility="gone"/>
+
+    <Spinner
         android:id="@+id/Spinner01"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animationCache="true"
-        android:drawSelectorOnTop="true"/>
+        android:drawSelectorOnTop="true"
+        android:layout_marginTop="1dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
