--- a/app/src/main/res/layout/register_user_agreement.xml
+++ b/app/src/main/res/layout/register_user_agreement.xml
@@ -5,13 +5,9 @@
     android:background="@color/page_bg"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/agreement_content"
+    <WebView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/font_9"
-        android:textSize="16sp"
-        android:lineSpacingExtra="5sp"
-        android:padding="15dp"/>
+        android:layout_height="match_parent"
+        android:id="@+id/webView"/>
 
 </LinearLayout>
