--- a/app/src/main/res/layout/content_list_item.xml
+++ b/app/src/main/res/layout/content_list_item.xml
@@ -17,6 +17,7 @@
         android:id="@+id/content_item_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="centerInside"
         android:visibility="gone"/>
 
 </LinearLayout>
