--- a/app/src/main/res/layout/financing_detail.xml
+++ b/app/src/main/res/layout/financing_detail.xml
@@ -374,6 +374,7 @@
                     android:layout_gravity="center_horizontal"/>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/financing_calculator"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
