--- a/app/src/main/res/layout/loan_detail.xml
+++ b/app/src/main/res/layout/loan_detail.xml
@@ -164,6 +164,7 @@
                                     android:layout_gravity="center_horizontal"/>
                         </LinearLayout>
                         <LinearLayout
+                            android:id="@+id/loan_calculator_layout"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -180,7 +181,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="收益计算器"
+                                    android:text="贷款计算器"
                                     android:textSize="14sp"
                                     android:textColor="@color/title_bg"
                                     android:layout_gravity="center_horizontal"/>
